--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,31 @@
-version: '2.2' # Keep on old version because Travis only provides old docker-compose
+version: '2.2'
 
 # Reusable options
 x-slides-base: &slides-base
   build: ./
   image: slides-builder
   environment:
-      - PRESENTATION_URL=${PRESENTATION_URL}
+    - PRESENTATION_URL=${PRESENTATION_URL}
+    - REPOSITORY_URL=${REPOSITORY_URL}
+  user: ${CURRENT_UID}
   volumes:
-      - ./content:/app/content
-      - ./dist:/app/dist
-      - ./assets:/app/assets
-      - ./gulp/gulpfile.js:/app/gulpfile.js
-      - ./gulp/tasks:/app/tasks
-      - ./package.json:/app/package.json
+    - ./content:/app/content
+    - ./demo:/app/demo
+    - ./dist:/app/dist
+    - ./assets:/app/assets
+    - ./gulp/gulpfile.js:/app/gulpfile.js
+    - ./gulp/tasks:/app/tasks
+    - ./package.json:/app/package.json
 
 services:
   serve:
     <<: *slides-base
     ports:
-        - "8000:8000"
+      - "8000:8000"
+
+  wait:
+    <<: *slides-base
+    entrypoint: "sleep 10000"
 
   build:
     <<: *slides-base
