--- a/lab-vm/docker/gitserver/app.ini
+++ b/lab-vm/docker/gitserver/app.ini
@@ -21,12 +21,12 @@ OFFLINE_MODE     = true
 START_SSH_SERVER = true
 
 [database]
-DB_TYPE  = sqlite3
 PATH     = /app/data/gitea/gitea.db
-HOST     = 127.0.0.1:3306
+DB_TYPE  = sqlite3
+HOST     = localhost:3306
 NAME     = gitea
-USER     = gitea
-PASSWD   =
+USER     = root
+PASSWD   = 
 SSL_MODE = disable
 
 [session]
@@ -47,9 +47,10 @@ MODE      = file
 LEVEL     = Info
 
 [security]
-INTERNAL_TOKEN = eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJuYmYiOjE1MDY1ODIwNDV9.qEiL-xGidYffkJT7OxZB-_f9Y5bLJq3lSViYlcJgSAg
-INSTALL_LOCK   = true
-SECRET_KEY     = yL1a7fwQgK
+INTERNAL_TOKEN      = eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJuYmYiOjE1MDY1ODIwNDV9.qEiL-xGidYffkJT7OxZB-_f9Y5bLJq3lSViYlcJgSAg
+INSTALL_LOCK        = true
+SECRET_KEY          = yL1a7fwQgK
+PASSWORD_COMPLEXITY = off
 
 [mailer]
 ENABLED = false
