--- a/lab-vm/docker/certs/traefik-dyn.yml
+++ b/lab-vm/docker/certs/traefik-dyn.yml
@@ -1,5 +1,5 @@
 ## Traefik Dynamic Configuration
 tls:
   certificates:
-    - certFile: /certs/localhost+5.pem
-      keyFile: /certs/localhost+5-key.pem
+    - certFile: /certs/localhost.pem
+      keyFile: /certs/localhost-key.pem
