Point lab to this year's presentation
Signed-off-by: dduportal <1522731+dduportal@users.noreply.github.com>

--- a/lab-vm/docker/web/default.tmpl.conf
+++ b/lab-vm/docker/web/default.tmpl.conf
@@ -14,12 +14,15 @@ server {
 
     # Forward requests to slides hosted on github pages
     location ^~ /slides/ {
-        rewrite ^/slides?(.*) /presentations$1 break;
+        set $slides_hostname "dduportal.github.io";
+        set $slides_path "/ensg-ci-cd/2019-2020";
+        resolver 127.0.0.11 ipv6=off;
+        rewrite ^/slides?(.*) $slides_path$1 break;
 
-        proxy_pass        https://oufti-playground.github.io;
+        proxy_pass        https://$slides_hostname;
 
         # Overwrite the initial host header, required to be accepted by github for requests
-        proxy_set_header  Host oufti-playground.github.io;
+        proxy_set_header  Host $slides_hostname;
 
         # Reset encoding to avoid double gzip of responses
         proxy_set_header  Accept-Encoding "";
