hotfix: use a prebuilt gitserver image
Signed-off-by: dduportal <1522731+dduportal@users.noreply.github.com>

--- a/lab-vm/docker/docker-compose.yml
+++ b/lab-vm/docker/docker-compose.yml
@@ -105,8 +105,8 @@ services:
       - AGENT_PRIVATE_KEY_FILE=/run/secrets/agent_private_key
   
   gitserver:
-    build: ./gitserver/
-    image: ${DOCKER_USERNAME}/oufti-gitserver
+    # build: ./gitserver/
+    image: dduportal/oufti-gitserver:2019-2020
     restart: unless-stopped
     labels:
       - traefik.enable=true
